--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@ body {
 
 body {
   background-size: cover;
+  color: #333;
+  font-family: sans-serif;
+}
+
+a,
+a:link,
+a:hover {
+  color: #336;
 }
 
 h1,
@@ -64,4 +72,5 @@ h1 {
   display: inline-block;
   bottom: 3px;
   right: 3px;
+  padding: 1px 3px;
 }
